<resources>
    <string name="app_name" translatable="false">CurrentLocation</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="coordinates_placeholder_error">Error</string>
    <string name="distance">The distance between you and prato della valle is</string>
    <string name="distance_button">Calculate distance</string>
    <string name="calculating">Calculating...</string>
</resources>